[package]
name = "planturl"
version = "0.3.0"
edition = "2018"
authors = ["Micha Glave <coding@migmedia.de"]
license = "Apache-2.0 OR MIT AND Zlib"
categories = ["command-line-utilities"]
keywords = ["graph", "plantuml"]
homepage = "https://github.com/migmedia/planturl"
description = """
A plantuml-file to server-url-encoder.
"""

[dependencies]
structopt = { version = "0.3.23", default-features = false }
deflate = { version = "0.9.1", default-features = false }
strum = { version = "0.21.0", features = ["derive"] }

[[bin]]
name = "planturl"
path = "src/main.rs"
