[package]
name = "planturl"
version = "0.3.1"
edition = "2018"
authors = ["Micha Glave <coding@migmedia.de"]
license = "Apache-2.0 OR MIT AND Zlib"
categories = ["command-line-utilities"]
keywords = ["graph", "plantuml"]
homepage = "https://github.com/migmedia/planturl"
description = """
A plantuml-file to server-url-encoder.
"""

[lib]
path = "src/lib.rs"

[dependencies]
clap = { version = "4.0", features = ["derive" ] }
deflate = { version = "1.0.0", default-features = false }
strum = { version = "0.24.1", features = ["derive"] }


[[bin]]
name = "planturl"
path = "src/bin/main.rs"
