[package]
name = "planturl"
version = "0.4.3"
edition = "2021"
authors = ["Micha Glave <coding@migmedia.de"]
license = "Apache-2.0 OR MIT AND Zlib"
categories = ["command-line-utilities"]
keywords = ["graph", "plantuml"]
homepage = "https://github.com/migmedia/planturl"
description = """
A plantuml-file to server-url-encoder and downloader.
"""

[features]
build-binary = ["anyhow", "clap", "deflate", "reqwest"]

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = { version = "1.0.86", optional = true }
clap = { version = "4.5.7", features = [ "derive" ], optional = true }
deflate = { version = "1.0.0", default-features = false, optional = true }
reqwest = { version = "0.12.4", features = ["blocking", "deflate", "brotli"], optional = true }

[dev-dependencies]
deflate = { version = "1", default-features = false }

[[bin]]
name = "planturl"
path = "src/bin/main.rs"
required-features = ["build-binary"]

[profile.release]
strip = "symbols"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/planturl-{ target }-v{ version }.{ archive-format }"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"
